# letterboxd-insights

./: .env.example  .gitignore  LICENSE  README.md  index.html  pyproject.toml  wrangler.jsonc
.omc/state/: idle-notif-cooldown.json
examples/sample_export/: diary.csv  ratings.csv
examples/sample_output/: films_enriched.csv  films_enriched.json  insights.html  insights.json
src/letterboxd_insights/: __init__.py  analytics.py  cli.py  enrich.py  ingest.py  models.py  providers.py  report.py
tests/: test_analytics.py  test_ingest.py
tests/fixtures/: diary.csv  ratings.csv
